# aad-b2c-validate-token

./: Cargo.toml  README.md
src/: error.rs  lib.rs
